# airflow-bio-utils

./: .bumpversion.cfg  .gitignore  README.md  package.json  publish.py  pyproject.toml  run_airflow.sh
.github/workflows/: build_and_test.yml
airflow_bio_utils/: __init__.py  file_operations.py  filesystem.py  logs.py
airflow_bio_utils/cli/: __init__.py  create_random_sequences.py  filter_sequences.py  merge_sequences.py
airflow_bio_utils/fasta_metrics/: __init__.py  fastq_metrics.py  plot_exports.py
airflow_bio_utils/fasta_metrics/calc/: adapter_kmers_plot.py  adapters.py  colors.py  cycle_spec_composition_plot.py  dates_distribution_plot.py  gc_distribution_plot.py  gc_plot.py  global_properties_plot.py  methylation_bias_plot.py  mismatch_plot.py  quality_distribution_plot.py  quality_map_plot.py  quality_plot.py  sequence_length_distribution_plot.py  sequence_specific_kmers_plot.py  utils.py  virdis_color_palette.py
airflow_bio_utils/fasta_metrics/utils/: fastq_generate.py
airflow_bio_utils/operators/: __init__.py  count.py  filter.py  for_each.py  merge.py  metrics.py  random.py  utils.py
airflow_bio_utils/sequences/: __init__.py  filter.py  merge.py  random.py  transformations.py
airflow_bio_utils/sequences/filter/: __init__.py  condition.py  filter.py  length.py  symbols.py
tests/: test_dvc_integration.py  test_filter.py  test_metrics.py  test_random.py
tests/helpers/: dag_tests.py
